--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,12 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/school-db
 
+logging:
+  level:
+    root: INFO
+    com.school.system: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
 kafka:
   bootstrap-servers: localhost:9092
